fixed my nav "jumping" when hovered

--- a/css/main.css
+++ b/css/main.css
@@ -56,15 +56,14 @@ a:hover, a:visited, a:link, a:active {
 }
 
 .nav a { 
-	text-decoration: none;
 	color: #484849;
 	font-size: 14pt;
+    border-bottom: 3px solid #eee;
 }
 
 .nav a:hover { 
 	color: black;
-    display: inline-block;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #d0d0d0;
 } 
 
 .wordmark { 
